--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Error message and password prompt
 
 <li>דניאל</li>
 
-<li>דפני אַבַּרוֹאַה</li>
+<li>דפני אברואה</li>
 
 <li>האומנית</li>
 
@@ -394,6 +394,8 @@ Error message and password prompt
 <li>יד ימין אינה יודעת</li>
 
 <li>יויו</li>
+
+<li>יויו וגורה</li>
 
 <li>ים טתיס</li>
 
@@ -8405,10 +8407,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170522173458569" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Orphans</pre>
+<div created="20161023184709475" modified="20170522231722301" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170522173606020" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170522232007671" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8417,7 +8419,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עושים שלום]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יויו וגורה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8437,7 +8439,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170522173539959" title="$:/temp/search">
+<div created="20161023184814872" modified="20170522232003820" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8835,14 +8837,14 @@ Error message and password prompt
 
 ביתה הבכורה של [[ז'נבייב]]. היא בת עשרים ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20170328195137638" modified="20170521221742556" tags="[[אחות כהן]]" title="אלפרד">
+<div created="20170328195137638" modified="20170522202413268" tags="[[אחות כהן]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
 
 דברים לוקחים זמן. לקח לי זמן להיות יכולה לנסות לצייר את אלפרד ולכתוב עליו, אבל אלפרד הוא חלק בלתי נפרד מחיי ומחיי [[כולנו|האחיות כהן]]. כשהוא נכנס לחדר, נכנס ענן חם וטוב. הוא [[סבל|מסוכנת]] לא מעט בחייו, ובכל זאת נשאר אדם בעל לב טהור.
 
-הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, אמנו נפטרה, דןדן ואני נסענו להודו להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
+הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, [[אמנו נפטרה|יויו וגורה]], דןדן ואני נסענו להודו להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
 
 הוא חכם, כשרוני, חרוץ, סקרן, לא מכיר בערך עצמו, ואין לו מושג כמה שהוא חתיך.
 
@@ -9302,7 +9304,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170522173409945" title="דפני אַבַּרוֹאַה">
+<div created="20170225205632304" modified="20170522231813367" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
@@ -9445,7 +9447,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170225123850883" modified="20170512173553598" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
+<div created="20170225123850883" modified="20170522231753010" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
 <pre>[img[pictures/DR8EdG7xEWfUvOmE.jpg]]
 
 
@@ -10225,6 +10227,26 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 לא מספיק הכרתי, למעשה, את דיוויד בואי עד שיויו הפך לחלק מחיי היומיום שלי, כלומר בשנה האחרונה.
 
  
+</pre>
+</div>
+<div created="20170522202441678" modified="20170522232145109" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="יויו וגורה">
+<pre>[img[pictures/yoyo-ve-gura.jpg]]
+
+!!![[גורה]]:
+
+כשאני מתפרקת, [[יויו]] נוהג להוציא אותי לסיבוב. 
+
+בשלב מסויים של ההליכה, אני מתחילה להשתגע, ואז אנחנו מתיישבים.
+
+הוא אף-פעם לא כועס עלי, ואם זה קורה, גם אז, הוא סבלני אלי ונחמד.
+
+הוא יכול לפעמים להגיד לי דברים שקשה לי לשמוע, כמו למשל, שאני חראית לפעמים, או יהירה, או לא קשובה, אבל באותה נשימה הוא גם יכול להגיד לי שאני נפלאה, ושגם אני [[שמרתי עליו|אלה]] לא מעט פעמים. 
+
+אני רוצה להיות אחרת, אבל העצב והכעס לפעמים רצים לי בתוך הראש, עד שאני מתפרצת בצורה לא מבוקרת.
+
+בזמן האחרון,  כשאני מציירת לאתר שלנו, אני נרגעת.
+
+
 </pre>
 </div>
 <div created="20161030110441328" modified="20170507181607179" tags="HH" title="ים טתיס">
