--- a/index.html
+++ b/index.html
@@ -8419,7 +8419,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יויו וגורה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דפני אברואה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9304,14 +9304,14 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170225205632304" modified="20170522231813367" title="דפני אברואה">
+<div created="20170225205632304" modified="20170523142244320" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
 
 אל תתעסקו עם הדפני.
 
-היא הייתה בת ארבע כשנולדי, וזמן קצר אחרי הולדתי, [[הורי|ג'וזף אברואה]] שמו לב שהיא החלה ללכת על קצות האצבעות ולהשתולל, כלומר, להתנגד לכל דבר, לקחת כל דבר, לצעוק בלי להפסיק.  בילדותה ונערותה הייתה רזה, ספורטיבית, ומושכת, היא התגברה, יחסית, על &quot;ההפרעת הליכה&quot;, אך נשארה [[מסוכנת]].</pre>
+היא הייתה בת ארבע כשנולדתי, וזמן קצר אחרי הולדתי, הורי שמו לב, שהיא החלה ללכת על קצות האצבעות ולהשתולל, כלומר, להתנגד לכל דבר, לקחת כל דבר, לצעוק בלי להפסיק.  בילדותה ונערותה הייתה רזה, ספורטיבית, ומושכת, היא התגברה, יחסית, על &quot;ההפרעת הליכה&quot;, אך נשארה [[מסוכנת]].</pre>
 </div>
 <div created="20170319161219583" modified="20170507181946375" tags="HH" title="האומנית">
 <pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
