--- a/index.html
+++ b/index.html
@@ -8419,7 +8419,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דפני אברואה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8439,7 +8439,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170522232003820" title="$:/temp/search">
+<div created="20161023184814872" modified="20170523153027306" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8780,7 +8780,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161115182456203" modified="20170512173258138" title="אלה">
+<div created="20161115182456203" modified="20170523152600176" title="אלה">
 <pre>[img[pictures/ela.jpg]]
 
 !!![[יויו]]:
@@ -8926,7 +8926,7 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170515183437038" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20170523152620806" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -9324,7 +9324,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170512195801915" title="האחיות כהן">
+<div created="20161111215423587" modified="20170523152704663" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -9333,7 +9333,7 @@ Error message and password prompt
 
 שלום רב,
 
-בדצמבר 2016, עשרה ימים לאחר שנכנסנו, גורה דןדן ואני ל[[דירה|הדירה]], ארחנו חברים ל[[ארוחת כריסמס]]. זו הייתה ארוחה פנטסטית א-לה-דובונאז'. אני בעיקר זוכר את עצמי עומד מתנדנד ומבסוט על עצמי בשגעון.
+בדצמבר 2015, עשרה ימים לאחר שנכנסנו, גורה דןדן ואני ל[[דירה|הדירה]], ארחנו חברים ל[[ארוחת כריסמס]]. זו הייתה ארוחה פנטסטית א-לה-דובונאז'. אני בעיקר זוכר את עצמי עומד מתנדנד ומבסוט על עצמי בשגעון.
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
@@ -9360,7 +9360,7 @@ Error message and password prompt
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20170504162635914" modified="20170515154141970" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170523152539507" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -9577,7 +9577,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170512180610256" title="המעבדה">
+<div created="20161113192814802" modified="20170523152812611" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -11683,7 +11683,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161218191604654" modified="20170326091934178" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20170523152911573" title="עץ המשפחה של אווה">
 <pre>[img[https://i.imgur.com/EmPzZIq.jpg)]]
 
 !!![[אווה]]:
@@ -11701,7 +11701,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-וזה מה שסיפרתי ליויו, כפי שכתבתי ב[[כוכב המשאלות בעל תשע הצלעות]], ביום השני להגעתי אליו לדירה בפריז ל[[ארוחת כריסמס]]. זה היה יום לפני הארוחה, ב-23 בדצמבר 2016. הדברים שכתובים בהמשך הם ניסיון לתאר בקצרה את נוף ילדותי, ליויו שמידי פעם מגיב:
+וזה מה שסיפרתי ליויו, כפי שכתבתי ב[[כוכב המשאלות בעל תשע הצלעות]], ביום השני להגעתי אליו לדירה בפריז ל[[ארוחת כריסמס]]. זה היה יום לפני הארוחה, ב-23 בדצמבר 2015. הדברים שכתובים בהמשך הם ניסיון לתאר בקצרה את נוף ילדותי, ליויו שמידי פעם מגיב:
 
 דמיין: חצר ענקית, שמחולקת לבתים בתים. מעין שכונה. שכונה סגורה וענקית ובה שבעה בתים גדולים. 
 שבע חווילות ביניהן גנים יפהפיים ומלאי עצים. כל בית הוא בסדר גודל של 300-400 מטרים רבועים וסביבו עשרה דונמים של חצר עבותה. לצד כל בית כזה יש גם בית לעובדים וכן סדנאות עבודה ומחסנים.
