--- a/index.html
+++ b/index.html
@@ -8314,10 +8314,15 @@ Error message and password prompt
 <div created="20161023184955563" modified="20161113201946036" title="$:/DefaultTiddlers">
 <pre>[[האחיות כהן]]</pre>
 </div>
-<div status="complete" title="$:/Import">
-<pre>The following tiddlers were imported:
-
-# [[$:/plugins/coensisters/cc/styles]]</pre>
+<div plugin-type="import" status="pending" title="$:/Import" type="application/json">
+<pre>{
+    &quot;tiddlers&quot;: {
+        &quot;Untitled&quot;: {
+            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/hasinim.jpg&quot;,
+            &quot;title&quot;: &quot;Untitled&quot;
+        }
+    }
+}</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -8419,7 +8424,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="ג'ונג [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8439,7 +8444,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170523153027306" title="$:/temp/search">
+<div created="20161023184814872" modified="20170523213058321" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9029,10 +9034,27 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170323221312884" modified="20170417190933129" tags="[[אחות כהן]]" title="ג'ונג">
-<pre>[img[pictures/5LOlLNHYCapNfBhO.jpg]]
+<div created="20170323221312884" modified="20170523232603238" tags="[[אחות כהן]]" title="ג'ונג">
+<pre>[img[pictures/jong.jpg]]
 
-!!![[גורה]]:</pre>
+!!![[גורה]]:
+
+&quot;אני אגיע במטרו&quot;, היא התגובה לכל קביעה עם ג'ונג.
+הוא מעשן כבד, וחייכן שאוהב להיות לבד.
+ 
+
+הוא טוב בהברגות, בסוף כל עבודה הוא עובר ובודק אם הכל מחובר ומוברג כמו שצריך, כך גם בצביעה.
+
+יש לו אחות שצעירה ממנו בחמש שנים, שמגיעה איתו אלינו פה ושם.
+
+מבחינתו גם כשהוא במטרו הוא לבד.
+
+
+
+
+
+
+</pre>
 </div>
 <div created="20170514214551974" modified="20170522172321747" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
@@ -9659,22 +9681,21 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20170502194316142" title="הסינים">
-<pre>[img[pictures/S0BooiQwhm4gYLFk.JPG]]
+<div created="20161112205825183" modified="20170523232441696" title="הסינים">
+<pre>[img[pictures/hasinim.jpg]]
 
 !!![[גורה]]:
 
 [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]].
 
-חמישה גברים בתחילת שנות השלושים לחייהם. חמישתם נולדו למשפחות מהגרים שהגיעו לפריז כקבוצה בשנות השלושים של המאה ה-20.
+חמישה גברים בתחילת שנות השלושים לחייהם. חמישתם נולדו למשפחות מהגרים שהגיעו לפריז כקבוצה בתחילת שנות העשרים לחייהם [[מהאנגג'ואו|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%A0%D7%92%D7%92%27%D7%95%D7%90%D7%95]].
+
 
 הם (חמישתם), גדלו יחדיו, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את [[כריסמס האחרון|ארוחת כריסמס]].
 
 את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך ז'נבייב, דרכה הגענו [[לדירה|הדירה]].
 
-[[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת הרכישות.
-
-המשך יבוא.</pre>
+[[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת השיפוצים והרכישות לדירה, אך הם כולם אחד אחד.</pre>
 </div>
 <div created="20170406162100924" modified="20170415112139529" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
@@ -11939,14 +11960,14 @@ __אופן ההכנה____
 
 וכולם נהנים מאד</pre>
 </div>
-<div created="20170324140205427" modified="20170505174327163" tags="[[אחות כהן]]" title="פה">
+<div created="20170324140205427" modified="20170523211451822" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/fa.jpg]]
 
 !!![[יויו]]:
 
 פה, הוא, מה שנקרא כאן בגנזך, [[מהסינים|הסינים]].
 
-אביו סיני. הוא הגיע רווק לפריז, וחיש חש הכיר את אמו, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
+אביו הגיע רווק לפריז, וחיש חש הכיר את אמו, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
 
 פה הוא חכם, מקסים ונדיב.
 
