--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/Excise/-1455257748/new-title</li>
+
 <li>$:/state/Excise/-392760529/new-title</li>
 
 <li>$:/state/folded/ברוכים הבאים</li>
@@ -377,6 +379,8 @@ Error message and password prompt
 
 <li>ז'נבייב</li>
 
+<li>זקופי הגו</li>
+
 <li>חומרים</li>
 
 <li>חזרת</li>
@@ -449,6 +453,8 @@ Error message and password prompt
 
 <li>מלפפונים חמוצים</li>
 
+<li>ממשיכים לדמם</li>
+
 <li>מנקים היטב</li>
 
 <li>מסוכנת</li>
@@ -470,6 +476,8 @@ Error message and password prompt
 <li>מרק</li>
 
 <li>מרק כתום בסיר גדול</li>
+
+<li>משתדלים לא להגזים</li>
 
 <li>מתכוני ארוחת הכריסמס</li>
 
@@ -8318,7 +8326,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/hasinim.jpg&quot;,
+            &quot;text&quot;: &quot;http://coensisters.org/rss.xml\r\nהאחיות כהן&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8373,6 +8381,9 @@ Error message and password prompt
 <div created="20161023175855512" modified="20161026200215058" title="$:/SiteTitle">
 <pre>גנזך האחיות כהן</pre>
 </div>
+<div created="20170527183542044" modified="20170527183544362" title="$:/state/Excise/-1455257748/new-title">
+<pre></pre>
+</div>
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
@@ -8424,7 +8435,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ג'ונג [[האחיות כהן]]" title="$:/StoryList">
+<div list="ג'ונג [[ממשיכים לדמם]] [[בחוות החיות]] צ'נג [[זקופי הגו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8981,13 +8992,13 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170512180328304" title="בחוות החיות">
+<div created="20170425194155286" modified="20170527162715639" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
 !!![[גורה]]:
 
-!!''[[מאד מאד כייף|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]]''
+!!''[[מאד מאד כייף וגם|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]]''
 
 
 
@@ -9034,18 +9045,17 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170323221312884" modified="20170523232603238" tags="[[אחות כהן]]" title="ג'ונג">
+<div created="20170323221312884" modified="20170527220228731" tags="[[אחות כהן]]" title="ג'ונג">
 <pre>[img[pictures/jong.jpg]]
 
 !!![[גורה]]:
 
 &quot;אני אגיע במטרו&quot;, היא התגובה לכל קביעה עם ג'ונג.
-הוא מעשן כבד, וחייכן שאוהב להיות לבד.
- 
 
-הוא טוב בהברגות, בסוף כל עבודה הוא עובר ובודק אם הכל מחובר ומוברג כמו שצריך, כך גם בצביעה.
+הוא [[ישות עצמאית|משתדלים לא להגזים]], הוא מעשן כבד, הוא חייכן. הוא טוב בהברגות, בסוף כל עבודה הוא עובר ובודק אם הכל מחובר ומוברג כמו שצריך, כך גם בצביעה.
 
-יש לו אחות שצעירה ממנו בחמש שנים, שמגיעה איתו אלינו פה ושם.
+יש לו אחות, שצעירה ממנו בחמש שנים,
+והיא מגיעה איתו אלינו פה ושם.
 
 מבחינתו גם כשהוא במטרו הוא לבד.
 
@@ -9382,7 +9392,7 @@ Error message and password prompt
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20170504162635914" modified="20170523152539507" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170527162543397" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -9393,7 +9403,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
-&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], ותודה [[לדוד האמיתי|הדוד האמיתי]].
+&quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], ותודה [[לדוד האמיתי|הדוד האמיתי]].
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
@@ -10101,6 +10111,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
+</div>
+<div created="20170527175706471" modified="20170527220151038" title="זקופי הגו">
+<pre>[img[pictures/zkufey-hagev.jpg]]
+
+!!![[גורה]]:
+
+[[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.</pre>
 </div>
 <div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
@@ -11172,6 +11189,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170527145749109" modified="20170527162351886" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<pre>[img[pictures/benataim-medamemim.jpg]]
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, אנחנו מצדנו
+[[נמשיך לדמם|https://www.youtube.com/watch?v=cYhDSo9pgxg]], תחתים ובטנים,
+ימשיכו לשעמם. </pre>
+</div>
 <div created="20170114175718512" modified="20170424211535664" tags="[[המטבח על פי ז'נבייב]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
@@ -11304,6 +11328,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170527144129954" modified="20170527144728501" tags="[[בחוות החיות]]" title="משתדלים לא להגזים">
+<pre>[img[pictures/lo-chazirit.jpg]]
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.</pre>
 </div>
 <div created="20161114205035106" modified="20170425194308004" tags="[[מתכוני ארוחת הכריסמס]]" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
@@ -11619,7 +11648,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170522171825469" modified="20170522173731538" tags="[[בחוות החיות]]" title="עושים שלום">
+<div created="20170522171825469" modified="20170527144635296" tags="[[בחוות החיות]]" title="עושים שלום">
 <pre>[img[pictures/clavzirim-osim-shalom.jpg]]
 
 
@@ -11704,23 +11733,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161218191604654" modified="20170523152911573" title="עץ המשפחה של אווה">
-<pre>[img[https://i.imgur.com/EmPzZIq.jpg)]]
+<div created="20161218191604654" modified="20170527131033975" title="עץ המשפחה של אווה">
+<pre>[img[pictures/eva-garinit.jpg]]
+
 
 !!![[אווה]]:
-
-.
-''
-אלה שמות בני משפחתי הגרעינית.''
-
-
-
-
-
-
-[img[pictures/XW4amMFBmhWNvmuU.JPG]]
-
-
 
 וזה מה שסיפרתי ליויו, כפי שכתבתי ב[[כוכב המשאלות בעל תשע הצלעות]], ביום השני להגעתי אליו לדירה בפריז ל[[ארוחת כריסמס]]. זה היה יום לפני הארוחה, ב-23 בדצמבר 2015. הדברים שכתובים בהמשך הם ניסיון לתאר בקצרה את נוף ילדותי, ליויו שמידי פעם מגיב:
 
@@ -11749,10 +11766,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 סבלתי את אמותיי החורגות רק מתוך כבוד לאבא שלי, כמו שאני סובלת את האחים החורגים מתוך כבוד למשפחה, למרות שלא כולם בלתי ראויים. חלקם ראויים ביותר והיו אחים נהדרים ואני אוהבת כמה מהם עד מאד. אתה יכול רק לנסות ולדמיין כמה צאצאים נוספים נולדו מתוך 25 אחים ואחיות...? לא מעט, זה בטוח.
 אני חושב שיש לי הרבה מאד שאלות אלייך. אבל שאלה ראשונה ברשותך אישה יקרה... זה חוקי הדבר הזה?
 זה היה במקום אחר שהיה בזמן אחר וכן, זה היה לגיטימי למרות שזה לא היה מקובל, ואבא הלך רחוק עם הלגיטימציה ולשמחתי זה מאחורי והיום אני גרה במקום אחר לגמרי, שוב קרובה לאבא שכבר מלאו לו 92, וקרובה לאהרון שבעוד שבוע ימלאו לו 60, וקרובה לאדית – עוד חצי אחות שלי, בתה של מלכה, אשתו השלישית של אבא והיא בת גילי, וקרוב לניקי, האחות האחת לפני הצעירה ביותר מ25 בניו ובנותיו של אבינו ובתה של רחל, אשתו הצעירה ביותר והנפלאה ביותר שאהבה אותי ואני אותה. עם ניקי נפגשנו באיחור מה. אני אצייר לך יום אחד את עץ המשפחה שלי.
-זה סיפור עבות וצפוף כמו כמות עצים שמוח אחד לא יכול לדמיין בבת אחת, ולא יודעת כמה אספר לך ממנו ובטח לא עכשיו. עכשיו מה שעכשיו. אבינו לא התעסק אתנו יותר מידי, אבל מידי בוקר ברבע לשמונה היינו מתקבצים כולנו באמצע הנחלה, סמוך למקום בו עובר הנחל, וישנה במה קטנה ורחבה מרוצפת, וחורשת עצי מחט. אבא, שמצד אחד היה טיפוס ארטיסטי ומן הצד השני היה קשוח עד מפחיד, אסף את כולנו מידי בקר באותה רחבה. יויו יקר שלי... אני עצמי עוד לא לגמרי יודעת איך לדבר על 18 השנים הראשונות של חיי ולכן לא נוהגת לדבר עליהן. אני עוד אספר לך המון יויוקה ויש לי מספיק מה לספר גם אם לא אגיע בשלב זה לדברים שעדיין איני מסוגלת לדבר עליהם, אבל בינתיים רוצה לספר לך עוד דבר אחד מאותה נחלה. בבקרים באסיפה המשפחתית היה אבי עומד מולנו ועורך טקס לא ארוך, בו דבר ראשון איחל לכולנו בקר טוב ואנחנו לו. אחריו הוא היה מנחה אותנו לנשימה נכונה משך כמה דקות. מביט לכל אחד ואחד מאתנו לתוך העיניים. מסיים. מסתכל על כולנו ואומר: ועכשיו כל אחד מכם ילדי היקרים, יכול לבקש דבר מה אותו הוא מאחל לעצמו מכוכב המשאלות בעל תשע הצלעות. כל אחד מאתנו דמם עם עצמו לדקה. ואז חייך אבינו חיוך גדול. הצמיד כפות ידיו זו לזו בהנאה, בירך את כולנו ליום מוצלח ופורה, ומשם המשכנו כל אחד אל משימותיו. 
+זה סיפור עבות וצפוף כמו כמות עצים שמוח אחד לא יכול לדמיין בבת אחת, ולא יודעת כמה אספר לך ממנו ובטח לא עכשיו. עכשיו מה שעכשיו. אבינו לא התעסק אתנו יותר מידי, אבל מידי בוקר ברבע לשמונה היינו מתקבצים כולנו באמצע הנחלה, סמוך למקום בו עובר הנחל, וישנה במה קטנה ורחבה מרוצפת, וחורשת עצי מחט. אבא, שמצד אחד היה טיפוס ארטיסטי ומן הצד השני היה קשוח עד מפחיד, אסף את כולנו מידי בקר באותה רחבה. יויו יקר שלי... אני עצמי עוד לא לגמרי יודעת איך לדבר על 18 השנים הראשונות של חיי ולכן לא נוהגת לדבר עליהן. אני עוד אספר לך המון יויוקה ויש לי מספיק מה לספר גם אם לא אגיע בשלב זה לדברים שעדיין איני מסוגלת לדבר עליהם, אבל בינתיים, אני רוצה לספר לך עוד דבר אחד מאותה נחלה. 
 
 
-אראה לך את עץ המשפחה שלי.
+[img[pictures/aba-etz.jpg]]
+
+
+
+בבקרים באסיפה המשפחתית היה אבי עומד מולנו ועורך טקס לא ארוך, בו דבר ראשון איחל לכולנו בקר טוב ואנחנו לו. אחריו הוא היה מנחה אותנו לנשימה נכונה משך כמה דקות. מביט לכל אחד ואחד מאתנו לתוך העיניים. מסיים. מסתכל על כולנו ואומר: ועכשיו כל אחד מכם ילדי היקרים, יכול לבקש דבר מה אותו הוא מאחל לעצמו מכוכב המשאלות בעל תשע הצלעות. כל אחד מאתנו דמם עם עצמו לדקה. ואז חייך אבינו חיוך גדול. הצמיד כפות ידיו זו לזו בהנאה, בירך את כולנו ליום מוצלח ופורה, ומשם המשכנו כל אחד אל משימותיו. 
+
+
+
+
+
+.
+
 
 </pre>
 </div>
@@ -12176,12 +12204,15 @@ Fapina''
 
 לצ'ן יש אופי של חקלאי. הוא משקים קום, הוא אחראי על המשאית הקטנה של [[הסינים]], הוא חזק, חרוץ, ממושמע, נחמד ומצחיק טילים. </pre>
 </div>
-<div created="20170324140059460" modified="20170417190824902" tags="[[אחות כהן]]" title="צ'נג">
-<pre>[img[pictures/BD2Uz4oUe0WbjIAF.jpg]]
+<div created="20170324140059460" modified="20170527175653344" tags="[[אחות כהן]]" title="צ'נג">
+<pre>[img[pictures/chang.jpg]]
 
 !!![[גורה]]:
 
-צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
+[[אירי]] טוענת, שצ'נג הוא [[זקוף גו|זקופי הגו]]. צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.
+
+הוא בן יחיד, הוא מסיים השנה תואר שני בסטטיסטיקה, 
+הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.</pre>
 </div>
 <div created="20170423212318190" modified="20170423212516461" tags="[[אחיות חוץ]]" title="צ'רלי קאופמן">
 <pre>[img[pictures/charlie-kaufman.jpg]]
