זקופי הגו, תיקונים והוספות

--- a/index.html
+++ b/index.html
@@ -8435,7 +8435,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ג'ונג [[ממשיכים לדמם]] [[בחוות החיות]] צ'נג [[זקופי הגו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8455,7 +8455,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170523213058321" title="$:/temp/search">
+<div created="20161023184814872" modified="20170528150033083" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9666,12 +9666,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20170516175342827" title="המשק האוטרקי שלנו">
+<div created="20161218221618167" modified="20170528151336076" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
 
-במשק האוטרקי שלנו, העצמאות העיקרית היא. שאיננו זקוקים לאף אדם נוסף כי יש לנו זה את זה, ואנחנו צוות. אני סומך על כל אחד ואחת מחברי לאחיות כהן, ולראשונה אני לא חושש מדבר ואני גם יודע שאבי  כמוני, כבר לא דואג. 
+במשק האוטרקי שלנו, העצמאות העיקרית היא. שאיננו זקוקים לאף אדם נוסף כי יש לנו זה את זה, ואנחנו צוות. אני סומך על כל אחד ואחת מחברי [[לאחיות כהן|האחיות כהן]], ולראשונה אני לא חושש מדבר, ואני גם יודע, [[שאבי|ג'וזף אברואה]]  כמוני, כבר לא דואג. 
 
 שנינו יודעים, שגם עם [[אחותי|דפני אברואה]] תתחרבן לגמרי, יש לנו גב, שהופך אותנו לחלק ממשק אוטרקי חברתית, אנושית, נפשית. 
 
@@ -10112,12 +10112,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
-<div created="20170527175706471" modified="20170527220151038" title="זקופי הגו">
+<div created="20170527175706471" modified="20170528150445716" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
 
 !!![[גורה]]:
 
-[[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.</pre>
+[[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.
+
+היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו.</pre>
 </div>
 <div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
@@ -11958,7 +11960,7 @@ __אופן ההכנה____
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
 </div>
-<div created="20170414153603797" modified="20170414180739193" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
+<div created="20170414153603797" modified="20170528150947168" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
 <pre>[img[pictures/pavlova.jpg]]
 
 !!![[פיליפ]]:
@@ -11984,9 +11986,9 @@ __אופן ההכנה____
 
 חוץ מזה אני מקציף לקצפת חזקה, שני מיכלים של שמנת מתוקה עם ארבע כפות סוכר שטוחות.
 
-אני אורז כל דבר לחוד
+אני אורז כל דבר לחוד, מחבר ברגע המתאים
 
-וכולם נהנים מאד</pre>
+וכולם נהנים מאד.</pre>
 </div>
 <div created="20170324140205427" modified="20170523211451822" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/fa.jpg]]
@@ -12073,7 +12075,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170401151233604" modified="20170505133529340" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20170528151211923" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
@@ -12082,15 +12084,15 @@ __אופן ההכנה____
 
 ניסיתי בעיקר להראות את רעמת השיער המפוארת של הדוקטור, שצומחת ממצחו הגבוה בצורת לב, ואת פניו הנהדרים, ואת מבטו החכם והמעמיק.
 
-הוא היה הפסיכיאטר שלי, וכשיויו הגיע לפריז הלכנו אליו יחד.
+הוא היה הפסיכיאטר שלי, וכשיויו הגיע לפריז, הלכנו אליו יחד.
 
 נפשותינו נקשרו ואחרי שנפצעתי התקרבנו עוד.
 
-ב[[ארוחת כריסמס]] הוא פגש את [[אווה|אווה כהן]] - אותה הכיר שנים רבות קודם ובעצם שניהם אהבו זה את זו כל השנים האלה.
+ב[[ארוחת כריסמס]] הוא פגש את [[אווה|אווה כהן]] - אותה הכיר שנים רבות קודם, ובעצם שניהם אהבו זה את זו כל השנים האלה.
 
 יש לו שני בנים גדולים, הוא עצמו בן מעל ששים והתאלמן לפני כמה שנים.
 
-היום, כידוע, [[אנחנו|האחיות כהן]] משפחה אחת גדולה ושמחה.
+היום, כידוע, [[אנחנו|האחיות כהן]] משפחה אחת [[גדולה ושמחה|המשק האוטרקי שלנו]].
 
 </pre>
 </div>
