השלום מתחיל, אמסטרדם, קפיץ ספירלי, אירי טוענת

--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>אירי</li>
 
+<li>אירי טוענת</li>
+
 <li>איריס</li>
 
 <li>איריס הבת</li>
@@ -437,6 +439,8 @@ Error message and password prompt
 
 <li>מאיר אריאל</li>
 
+<li>מאכילים את המצפון</li>
+
 <li>מג'דרה</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
@@ -519,6 +523,8 @@ Error message and password prompt
 
 <li>עיר בנויה מרחובות</li>
 
+<li>עם יויו באמסטרדם</li>
+
 <li>עץ המשפחה של אווה</li>
 
 <li>פאי אגסים עם קרם גבינה ושקדים</li>
@@ -562,6 +568,8 @@ Error message and password prompt
 <li>קוסקוס</li>
 
 <li>קפה מילר</li>
+
+<li>קפיץ ספירלי</li>
 
 <li>קרן</li>
 
@@ -8423,10 +8431,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170522231722301" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170601204830186" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170522232007671" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170601204834589" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8435,7 +8443,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8455,7 +8463,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170528150033083" title="$:/temp/search">
+<div created="20161023184814872" modified="20170601233136181" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8737,18 +8745,18 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170418160606847" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20170531194855479" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
 
 אירי היא הנשמה של העולם, ולמרות או בזכות שאני מסטול עכשיו בצורה הכי טובה שאפשר להיות, אני יכול ככה לכתוב על אירי. ה&quot;אחיות כהן&quot; הן אחת אחת, ובכל זאת ולמרות שברגע אחר הייתי יכול לכתוב את אותן המילים בדיוק על מישהו אחר, אני כותב אותן עכשיו על אירי, שהיא הנשמה של העולם וגם אלופת עולם. 
 
-אתמול הלכתי איתה סתם לטייל בעיר, והיום אנחנו יושבים כל היום סתם בבית ולועסים את עצמינו לדעת. אולי בגלל שפסחתי על שנות העשרים של חיי נעים לי לחוות אותן עכשיו עם החבורה חסרת הגיל אך מהבחינה שאנחנו כל הזמן יחד. תמיד יש מישהו בדירה, וזה מאד עוזר כשאתה נפרד מחברה.
+אתמול הלכתי איתה סתם לטייל בעיר, והיום אנחנו יושבים כל היום סתם בבית, ולועסים את עצמינו לדעת. אולי בגלל שפסחתי על שנות העשרים של חיי, נעים לי לחוות אותן עכשיו עם החבורה חסרת הגיל, אך מהבחינה שאנחנו כל הזמן יחד. [[תמיד יש מישהו בדירה|המשק האוטרקי שלנו]], וזה מאד עוזר כשאתה נפרד מחברה.
 
-אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה אבל היא ביקשה לבד. היא נעה בשקט זקופה כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. &quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;, היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
+אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה [[אבל היא ביקשה לבד|אירי טוענת]]. היא נעה בשקט זקופה כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור, היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. [[&quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;|קפיץ ספירלי]], היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
 
-אני מבקש ממנה והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
+אני מבקש ממנה, והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
 
 ובכדי שתבינו עוד, אני ממליץ כאן על שלושה דברים:
 
@@ -8766,6 +8774,16 @@ Error message and password prompt
 
 
 </pre>
+</div>
+<div created="20170601134808349" modified="20170601162616966" title="אירי טוענת">
+<pre>[img[pictures/iri-toenet.jpg]]
+
+!!![[גורה]]:
+
+אפילו בעבודה [[אצל ז'נבייב|הקוסקוס]] - אירי עולה על כולנו. 
+
+
+&lt;&lt;list-links filter:&quot;[tag[אירי טוענת]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170201204950366" modified="20170425162732610" title="איריס">
 <pre>[img[pictures/iris.jpg]]
@@ -8992,7 +9010,7 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170527162715639" title="בחוות החיות">
+<div created="20170425194155286" modified="20170601161845127" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9125,7 +9143,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170512195124956" title="גלות">
+<div created="20170105170620001" modified="20170601165738854" tags="[[אירי טוענת]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -9135,13 +9153,13 @@ Error message and password prompt
 
 הדבר שאני חושבת בעת האחרונה, (זה התחיל   בשנה האחרונה, עם מותו של דיוויד בואי, שמחרתיים תמלא שנה למותו), הוא שבדומה [[לשליחתם בעבר של פושעים לאוסטרליה|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A1%D7%98%D7%A8%D7%9C%D7%99%D7%94#.D7.94.D7.99.D7.A1.D7.98.D7.95.D7.A8.D7.99.D7.94]], כך כדור הארץ הוא גלות לנשמות מכוכבים אחרים.
 
-אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו לא נראה כי אנחנו אלה שנוכל לשנע עצמינו לשם, כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
+אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו, לא נראה, כי אנחנו אלה שנוכל לשנע עצמינו לשם, כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
 
 הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן היא טקס בגרות כלשהו, שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
 
 
 
-אני רוצה לחשוב, שדיוויד בואי חזר לכוכב שלו בשלום, ובכך השלים את משימתו אם לא למעלה מזה.
+אני רוצה לחשוב, [[שדיוויד בואי|דיוויד בואי]] חזר לכוכב שלו בשלום, ובכך השלים את משימתו אם לא למעלה מזה.
 
 
 
@@ -9227,7 +9245,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20170426194804847" tags="[[אחיות חוץ]]" title="דיוויד בואי">
+<div created="20170105154405192" modified="20170601162027361" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -9707,7 +9725,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת השיפוצים והרכישות לדירה, אך הם כולם אחד אחד.</pre>
 </div>
-<div created="20170406162100924" modified="20170415112139529" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
+<div created="20170406162100924" modified="20170531193618198" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 !!![[גורה]]:
@@ -9716,9 +9734,6 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-גורה
-אני מספרת את מה
-שסיפר לי יויו
 
 את יויו הכרתי כשעבדתי בקפה של פועה ביפו. הייתי באה לאפות שם כמה פעמים בשבוע, והוא היה מגיע מדי ערב, שותה אספרסו והולך, או נשאר לקרוא ספר. משהו בפנים שלו סקרן אותי, וכששאלתי את יניב, הוא אמר לי שיויו מתגורר ברחוב הראשי של השוק ושאין לו מושג מה שמו ושהוא בקושי מדבר.
 אך כך קרה, יום אחד יויו צץ מולי במטבח ושאל אם נוכל לדבר, ומאז החל לספר לי את סיפור חייו:
@@ -10075,7 +10090,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20170426203913017" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20170601162115098" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטרה. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
@@ -10112,7 +10127,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
-<div created="20170527175706471" modified="20170528150445716" title="זקופי הגו">
+<div created="20170527175706471" modified="20170601161824977" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
 
 !!![[גורה]]:
@@ -10269,7 +10284,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  
 </pre>
 </div>
-<div created="20170522202441678" modified="20170522232145109" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="יויו וגורה">
+<div created="20170522202441678" modified="20170601232544744" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="יויו וגורה">
 <pre>[img[pictures/yoyo-ve-gura.jpg]]
 
 !!![[גורה]]:
@@ -10284,7 +10299,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני רוצה להיות אחרת, אבל העצב והכעס לפעמים רצים לי בתוך הראש, עד שאני מתפרצת בצורה לא מבוקרת.
 
-בזמן האחרון,  כשאני מציירת לאתר שלנו, אני נרגעת.
+בזמן האחרון,  [[כשאני מציירת לאתר שלנו|עם יויו באמסטרדם]], אני נרגעת.
 
 
 </pre>
@@ -10327,7 +10342,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקרוב יועתק לכאן.</pre>
 </div>
-<div created="20170425180523126" modified="20170522172147494" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20170601181923374" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -10557,6 +10572,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[מאיר אריאל  ז&quot;ל|https://he.wikipedia.org/wiki/%D7%9E%D7%90%D7%99%D7%A8_%D7%90%D7%A8%D7%99%D7%90%D7%9C]], 
 </pre>
 </div>
+<div created="20170601174031503" modified="20170601223003837" tags="[[בחוות החיות]]" title="מאכילים את המצפון">
+<pre>[img[pictures/shalom-batooki.jpg]]
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
+</div>
 <div created="20170402193858167" modified="20170404203721884" tags="[[מתכוני ארוחת הכריסמס]]" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
@@ -10626,19 +10646,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''</pre>
 </div>
-<div created="20170406164152446" modified="20170418160335679" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20170531194021668" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
 !!![[גורה]]:
 
-את הסיפור הזה כתבתי לאחר שחזרנו עם אירי מהודו, וערך אותו [[רני|רן יגיל]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
+את הסיפור הזה כתבתי לאחר שחזרנו עם [[אירי]] מהודו, וערך אותו [[רני|רן יגיל]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
 
 מחפשת את אירי
 
 
 
-אירי כבר שכבה כמה שעות טובות על המיטה ללא כל תזוזה, כשלפתע יד נעלמה ענקית אחזה בבד כותונת הלילה המהוהה שלבשה והרימה אותה מן המיטה תלויה. ידיה ורגליה שמוטות. ראשה שמוט. שדיה שמוטים יוצאים מצדי הכותונת שאת שרווליה הארוכים גזרה ביום קיץ חם. היד הנעלמה משכה אותה דרך התקרה. אירי ניסתה לצרוח, אך יד ענקית שנייה סתמה את פיה בעדינות וקול היסוי נשמע. עיניה היו עצומות בחוזקה, ולרגע קט שבו פקחה אותן יכלה לראות איך תקרת ביתה נסגרת ואיך היא ממשיכה להילקח דרומה ומזרחה. היא חזרה לעצום את עיניה, לא מעזה להזיז שום חלק מגופה. 
+אירי כבר שכבה כמה שעות טובות על המיטה ללא כל תזוזה, כשלפתע יד נעלמה ענקית אחזה בבד כותונת הלילה המהוהה שלבשה והרימה אותה מן המיטה תלויה. ידיה ורגליה שמוטות. ראשה שמוט. שדיהשמוטים יוצאים מצדי הכותונת שאת שרווליה הארוכים גזרה ביום קיץ חם. היד הנעלמה משכה אותה דרך התקרה. אירי ניסתה לצרוח, אך יד ענקית שנייה סתמה את פיה בעדינות וקול היסוי נשמע. עיניה היו עצומות בחוזקה, ולרגע קט שבו פקחה אותן יכלה לראות איך תקרת ביתה נסגרת ואיך היא ממשיכה להילקח דרומה ומזרחה. היא חזרה לעצום את עיניה, לא מעזה להזיז שום חלק מגופה. 
 כעשר דקות אחר כך היא הונחה על גג ברחוב הוברמן שליד היכל התרבות. מוזיקה עצומה וקולות של אנשים היו שם במלוא עוצמתם. 
 במשך כל זמן ה&quot;תעופה&quot; והרבה יותר מזה, מיד כששמעה את קולות האנשים, ראשה קדח מדאגה בנוגע להופעתה. איך תיראה כך ברבים. אפילו תחתונים אין לה. ולא חזייה. היד הניחה אותה בעדינות על מזרן שהיה על הגג שעליו הייתה כרית ענקית ורכה. היא כיווצה את עצמה לידי כדור ולא העזה ולו לרגע לפקוח אף לא אחת מעיניה שמא תראה שמביטים בגופה הנלעג. כך חשבה. לרגע קט פקחה עין ודחקה עצמה עמוק, מתכסה בחלק מהמזרן ובכרית. בחורה ענוגה שריח חתולים עלה ממנה התיישבה עליה מבלי משים, אוחזת בידה כוס פלסטיק עם יין ובשנייה תיק קטן וסיגריה.
 &quot;אאוץ'&quot;, קראה אירי. &quot;את מוכנה בבקשה לזוז קצת?&quot;. האישה הצעירה והחיוורת הייתה מופתעת. אירי יכלה לראות את הדרקון הגדול שהיה מקועקע על השוק השמאלית שלה. 
@@ -11650,11 +11670,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170522171825469" modified="20170527144635296" tags="[[בחוות החיות]]" title="עושים שלום">
+<div created="20170522171825469" modified="20170601223028829" tags="[[בחוות החיות]]" title="עושים שלום">
 <pre>[img[pictures/clavzirim-osim-shalom.jpg]]
 
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים שלום.</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים [[שלום|מאכילים את המצפון]].</pre>
 </div>
 <div created="20170414012036863" modified="20170424211626183" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
@@ -11734,6 +11754,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 פתאום...פתאום...הסתובבתי ורצתי במהירות...חזרה לרחוב רהיטים קודרים מחכה בריצה להגיעה כבר אל הרחוב הצבעוני, רצתי עוד ועוד, איברי נשלחו לכל עבר, בקושי נשמתי, הגעתי לפניה ימינה לרחוב העפרונות, בריצתי לא הבחנתי בשובל ריח שחיכה לי במעבר החצייה שממול לדוכן העיתונים של נינו. הוא רץ איתי מבלי ששמתי לב אליו, נופפתי מהר לשלום לכולם, גם לאניקה ושרה מבעד לחלון הקונדיטוריה, הן לא ראו אותי, אני לא ראיתי את שובל, טיפסתי מהר אל ביתי, פתחתי את הדלת במהרה, אפילו קצת בחוזקה, דרך הכניסה והמסדרון, מהר זרקתי גופי על המיטה, כיסיתי את עיני בשתי ידי חזק, רציתי חושך, רציתי לא לראות את כל המחשבות המציפות מבלי לראות דבר ולראות נכוחה...שכבתי ככה, הלמות לבי אט אט פסקה, התחלתי לנשום, נזכרתי בקדרות של רחוב רהיטים קודרים, שפתי קפצו קדימה, נזכרתי ביפי רחוב עלי שלכת, התרככתי קצת, הפה מעט רפה, נזכרתי בתנועותיה של האישה שנעה לצלילי תיבת הנגינה , מוסיקה חדרה ללבי, מילאתי פי מים, לאט פקחתי עיני, שמעתי את בטני המקרקרת, שובל ריח עלה באפי, זה כבר היה ריחו של בריוש, הבטתי אל תקרת חדר השינה שלי, הסתובבתי, קמתי, חייכתי, חיוך גדול חייכתי, שמחתי, התלבשתי יפה, בבגדים רכים וחמימים, דילגתי מטה על פני המדרגות הלולייניות, ניגשתי לדוכן העיתונים של נינו וקניתי עיתון וגם מגאזין מוסיקה, נכנסתי לאניקה ושרה, הן אמרו ששובל ריח קרואסון הבין אותי, הן שמעו אותו אומר לשובל ריח בריוש שיקבל את פני, הזמנתי בריוש וספל של אותו קפה כמו בכל יום, ישבתי שם וישבתי, והחלטתי שהיום לא אתנהל באופן שגרתי...נפרדתי לשלום מאניקה ושרה, שובל ריח ליווה אותי עד לרחוב רהיטים כבדים, קרן שמש האירה את הרחוב, פסעתי בוטחת אל רחוב פרדס, חשבתי שאם יוותר לי זמן אור אלך גם לרחוב עלי שלכת ולרחוב פרחי בר, אולי בפרחי בר אוכל ארוחה עיקרית, אך נחושה לרחוב רמזים..לא מפחדת...ולדעת...דבר מה אחר... 
 
 </pre>
+</div>
+<div created="20170601232601606" modified="20170601233324044" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<pre>
+[img[pictures/amsterdam-im-yoyo.jpg]]
+
+!!![[גורה]]:
+
+בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני של אותה שנה|דןדן נסע]].
+
+[[איבדתי את זה|https://www.youtube.com/watch?v=kI6MWZrl8v8]] לכמה חודשים, אבל כשחזרתי, התחלתי לעבוד ביתר שאת על [[האתר|האחיות כהן]] והתאהבתי בלעטר.</pre>
 </div>
 <div created="20161218191604654" modified="20170527131033975" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
@@ -12335,6 +12365,20 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170601134704239" modified="20170601204108558" tags="[[אירי טוענת]]" title="קפיץ ספירלי">
+<pre>[img[pictures/kfitz-spirali.jpg]]
+
+[[אירי]]:
+
+הגוף שלנו משוכלל, בין השאר, ביכולתו לנוע בחכמה ובגמישות, ולבלום זעזועים.
+
+לאורכו קשתות קעורות וקמורות, החל בקשת כף הרגל, שגודלה תלוי במיקום האחזות גיד אכילס, דרך הקרסול, הברכיים, מפרק הירך, המותנית והצוואר - כל אלה מהווים בולם זעזועים קפיצי, שיכול לנוע גם בתנועה אופקית.
+
+[[בשיעורי האלכסנדר|שיטת אלכסנדר]], לומדים לכוון, להניח לצוואר להיות חופשי, לרווח בין מפרק למפרק, ובכך, בין השאר, לשמור על הקפיץ הספירלי, ולנוע ביתר קלות קדימה ולמעלה.
+
+
+</pre>
+</div>
 <div created="20170401220808061" modified="20170401221320005" title="קרן">
 <pre>[img[pictures/keren.jpg]]
 
@@ -12633,7 +12677,7 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20161206222443036" modified="20170509212301701" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20170601162045976" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
