--- a/index.html
+++ b/index.html
@@ -379,6 +379,8 @@ Error message and password prompt
 
 <li>הרקוויאם של פורה</li>
 
+<li>וויקליף ז'אן</li>
+
 <li>ז'נבייב</li>
 
 <li>זקופי הגו</li>
@@ -424,6 +426,8 @@ Error message and password prompt
 <li>כשהיו מעט מכוניות</li>
 
 <li>לוקוס בתנור</li>
+
+<li>לורין היל</li>
 
 <li>לזניה צמחונית</li>
 
@@ -8443,7 +8447,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[לורין היל]] [[בחוות החיות]] [[זקופי הגו]] [[וויקליף ז'אן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10090,7 +10094,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20170601162115098" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20170602154358857" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטרה. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
@@ -10098,6 +10102,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]] הזה גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+</div>
+<div created="20170602111237129" modified="20170602125320705" tags="[[אחיות חוץ]]" title="וויקליף ז'אן">
+<pre>[img[pictures/wyclef-jean.jpg]]
+
+התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
 <div created="20161112221314170" modified="20170514230829528" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
@@ -10399,6 +10408,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מורחים היטב את הכמות כולה ובצורה אחידה מסביב לדג כולו, ומניחים אותו בתבנית מרופדת בנייר אלומיניום פתוח כך שאפשר יהיה לעטוף אותו למשך האפייה.
 
 פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.</pre>
+</div>
+<div created="20170602125241296" modified="20170602150737090" tags="[[אחיות חוץ]]" title="לורין היל">
+<pre>[img[pictures/lauryn-hill.jpg]]
+
+!!![[גורה]]:
+
+[[לורין|http://www.imdb.com/name/nm0005012/]] היא [[מוש|https://www.youtube.com/watch?v=T6QKqFPRZSA]].</pre>
 </div>
 <div created="20170413203131062" modified="20170413205247837" tags="[[מתכוני ארוחת הכריסמס]]" title="לזניה צמחונית">
 <pre>[img[pictures/lazania.jpg]]
@@ -11755,15 +11771,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170601233324044" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
-<pre>
-[img[pictures/amsterdam-im-yoyo.jpg]]
+<div created="20170601232601606" modified="20170602163623154" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
 
-בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני של אותה שנה|דןדן נסע]].
+בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני|דןדן נסע]].
 
-[[איבדתי את זה|https://www.youtube.com/watch?v=kI6MWZrl8v8]] לכמה חודשים, אבל כשחזרתי, התחלתי לעבוד ביתר שאת על [[האתר|האחיות כהן]] והתאהבתי בלעטר.</pre>
+אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
+
+כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
+
+[[בשמי|וויקליף ז'אן]] ובשם [[וויקליף ז'אן|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], בליווי כלי מיתר ראויים:
+
+
+I wanna dedicate this song, Gone 'Til November...
+To all you ladies out there, crying all alone in your room
+And all you fellas, going down south...Not making it back...
+May the lord bless your soul, I love you girl</pre>
 </div>
 <div created="20161218191604654" modified="20170527131033975" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
