ויקליף, לורין, הוספות ותיקונים

--- a/index.html
+++ b/index.html
@@ -8447,7 +8447,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לורין היל]] [[בחוות החיות]] [[זקופי הגו]] [[וויקליף ז'אן]]" title="$:/StoryList">
+<div list="[[הרקוויאם של פורה]] [[לורין היל]] [[בחוות החיות]] [[זקופי הגו]] [[וויקליף ז'אן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10094,12 +10094,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20170602154358857" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20170602165440851" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטרה. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
 
-אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]] הזה גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
+אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
